k8s/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # Use the default Istio ingress gateway
  servers:
    - port:
        number: 80 # Listen on HTTP port 80
        name: http
        protocol: HTTP
      hosts:
        - '*' # Accept requests for all hostnames
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
    - '*' # Match all incoming host headers
  gateways:
    - bookinfo-gateway # Bind this rule to the defined Gateway
  http:
    - match:
        - uri:
            exact: /productpage
        - uri:
            prefix: /static
        - uri:
            exact: /login
        - uri:
            exact: /logout
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: productpage
            port:
              number: 9080
